--- a/services/nginx/conf.d/nginx.conf
+++ b/services/nginx/conf.d/nginx.conf
@@ -1,24 +1,83 @@
 
-# Bascic no-ssl server block
+# Block alihack
+# deny 23.27.103.106/32;
+
+upstream gateway_client {
+  # least_conn;
+  server gateway_client:7102;
+}
+
+upstream users_service {
+  # least_conn;
+  server users_service:7101;
+}
+
+upstream listings_service {
+  # least_conn;
+  server listings_service:7100;
+}
 
 server {
 
-  listen 80;
-  listen [::]:80;
+  listen 80 default_server;
+  listen [::]:80 default_server;
+
+  # listen 80;
+  # listen [::]:80;
+
+  # if ($request_method = 'OPTIONS') {
+  #   return 200;
+  # }
 
   root /var/www/html;
-  index index.html index.htm index.nginx-debian.html;
+  index index.html;
+  # index index.html index.htm index.nginx-debian.html;
 
-  server_name seesee.space www.seesee.space;
+  # server_name seesee.space www.seesee.space;
+
+  # location / {
+  #   proxy_pass http://sample_service:7102;
+  # }
+
+  # To allow POST on static pages
+  # error_page 405 =200 $uri;
 
   location / {
-    proxy_pass http://gateway_client:3000;
+    proxy_pass http://gateway_client;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
+    break;
   }
 
-  location ~ /.well-known/acme-challenge {
-    allow all;
-    root /var/www/html;
+  location ~* \.(eot|otf|ttf|woff|woff2)$ {
+    add_header Access-Control-Allow-Origin *;
   }
+
+  location ~ /users/(?<url>.*) {
+    proxy_pass http://users_service;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
+  }
+
+  location ~ /listings/(?<url>.*) {
+    proxy_pass http://listings_service;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
+  }
+
+  # location ~ /.well-known/acme-challenge {
+  #   allow all;
+  #   root /var/www/html;
+  # }
 
 }
 
@@ -75,11 +134,11 @@ server {
 #   resolver 8.8.8.8;
 
 #   location / {
-#     try_files $uri @gateway_client;
+#     try_files $uri @sample_service;
 #   }
 
-#   location @gateway_client {
-#     proxy_pass http://gateway_client:3000;
+#   location @sample_service {
+#     proxy_pass http://sample_service:7102;
 #     add_header X-Frame-Options "SAMEORIGIN" always;
 #     add_header X-XSS-Protection "1; mode=block" always;
 #     add_header X-Content-Type-Options "nosniff" always;
