--- a/.vscode/.devcontainer.json
+++ b/.vscode/.devcontainer.json
@@ -1,7 +1,5 @@
 {
   // "workspaceMount": "source=${localWorkspaceFolder},target=/workspace,type=bind,consistency=cached",
   // "workspaceFolder": "/workspace",
-  // "mounts": [
-  //   "source=try-node-node_modules,target=/workspace/node_modules,type=volume"
-  // ]
+  // "mounts": [ "source=try-node-node_modules,target=/workspace/node_modules,type=volume" ]
 }
