--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,12 +1,38 @@
 {
   "version": "0.2.0",
   "configurations": [
+    // launch the sample service using node
     {
-      "name": "launch users api",
+      "name": "Sample API",
+      "request": "launch",
+      "program": "${workspaceFolder}/services/sample/dist/index.js",
+      "skipFiles": ["<node_internals>/**"],
+      "type": "pwa-node"
+    },
+    // launch the users service using node
+    {
+      "name": "Users API",
       "request": "launch",
       "program": "${workspaceFolder}/services/users/dist/index.js",
       "skipFiles": ["<node_internals>/**"],
       "type": "pwa-node"
+    },
+    // launch the listings service using node
+    {
+      "name": "Listings API",
+      "request": "launch",
+      "program": "${workspaceFolder}/services/listings/dist/index.js",
+      "skipFiles": ["<node_internals>/**"],
+      "type": "pwa-node"
+    },
+    // 
+    {
+      "name": "Zsh Debug",
+      "request": "launch",
+      "program": "${command:SelectScriptName}",
+      "cwd": "${workspaceFolder}",
+      "args": [],
+      "type": "zshdb",
     },
   ]
 }
