--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,13 @@
 {
   "version": "0.2.0",
   "configurations": [
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Docker Attach to Node",
+      "remoteRoot": "/home/node/app"
+      // "remoteRoot": "/usr/src/app"
+    },
     // launch the pwa in chrome
     {
       "name": "App in Chrome",
