--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,21 +5,19 @@
   "codedeploy.isApplicationWorkspace": true,
   // seesee lightsail rsync
   "sync-rsync.sites": [
+    // {
+    //   "name": "seesee",
+    //   "upOnly": true,
+    //   "localPath": "/home/dany/projects/github/seesee/",
+    //   "remotePath": "ubuntu@34.234.108.25:/home/ubuntu/seesee",
+    //   "exclude": ["**/.git", "**/.vscode", "**/.cache", "**/dist", "**/assets", "**/build", "**/node_modules", "**/docker-compose.test.yml" ],
+    // },
     {
-      "name": "seesee",
+      "name": "staged",
       "upOnly": true,
-      "localPath": "/home/dany/projects/github/seesee/",
-      "remotePath": "ubuntu@34.234.108.25:/home/ubuntu/seesee",
-      "exclude": [
-        "**/.git",
-        "**/.vscode",
-        "**/.cache",
-        "**/dist",
-        "**/assets",
-        "**/build",
-        "**/node_modules",
-        "**/docker-compose.test.yml",
-      ],
+      "localPath": "/home/dany/projects/github/seesee/assets/mern/",
+      "remotePath": "ubuntu@34.234.108.25:/home/ubuntu/staged",
+      "exclude": ["**/node_modules"],
     },
   ],
   // favorites storage location
