--- a/platforms/pwa/package.json
+++ b/platforms/pwa/package.json
@@ -1,7 +1,7 @@
 {
   "name": "platforms-gallery-pwa",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "index.js",
   "author": "Dany Dodson",
   "description": "platforms-gallery-pwa",
   "scripts": {
