--- a/services/nginx/Dockerfile
+++ b/services/nginx/Dockerfile
@@ -1,12 +1,15 @@
 FROM nginx:mainline-alpine
 
+# replace nginx default.conf
 RUN rm /etc/nginx/conf.d/default.conf
-COPY conf.d/default.conf /etc/nginx/nginx.conf
+COPY conf.d/default.conf /etc/nginx/default.conf 
+# or ... ???
+# COPY conf.d/default.conf /etc/nginx/conf.d/nginx.conf
 
-# Copy the react build from the build container
+# copy the react build from the build container
 # COPY --from=builder /usr/src/app/build /usr/share/nginx/html
 
-# Set permissions so nginx can serve it
-RUN chown nginx.nginx /usr/share/nginx/html/ -R
+# set permissions so nginx can serve it
+# RUN chown nginx.nginx /usr/share/nginx/html/ -R
 
 EXPOSE 80
