--- a/services/users/Dockerfile
+++ b/services/users/Dockerfile
@@ -10,7 +10,8 @@ RUN apt-get update && apt-get upgrade \
 
 USER node
 
-RUN yarn install --production=true
+RUN yarn
+
 COPY --chown=node:node . /home/node/app/
 
 FROM node:14
@@ -18,9 +19,10 @@ FROM node:14
 RUN mkdir -p /home/node/app/node_modules && chown -R node:node /home/node/app
 WORKDIR /home/node/app
 
-COPY --from=builder /usr/src/app /usr/src/app
+COPY --from=builder /home/node/app /home/node/app
 
 USER node
 
+EXPOSE 7101
+
 CMD ["yarn", "watch"]
-# CMD yarn watch
